<resources>
    <string name="app_name">₵alculator $alariu</string>
    <string name="str_copyright">©2021</string>
    <string name="str_title">Calculator</string>
    <string name="str_rezultat">Rezultat</string>
    <string name="str_money">💰</string>
    <string name="str_gift">🎁</string>
    <string name="str_diamond">💎</string>

    <string name="str_play_final">➾</string>
    <string name="str_play_complete">+</string>
    <string name="str_multiple">⨯</string>
    <string name="str_euro">€</string>
    <string name="str_dollar">$</string>
    <string name="str_leu">L</string>
    <string name="str_pound">£</string>
    <string name="str_franc">fr.</string>
    <string name="str_show">✯</string>
    <string name="str_rupee">₹</string>
    <string name="str_ruble">₽</string>

    <string name="str_hint">Salariul Brut (în lei)</string>
    <string name="str_hint_dolari">Salariul Brut (în dolari)</string>
    <string name="str_hint_lire">Salariul Brut (în lire)</string>
    <string name="str_hint_euro">Salariul Brut (în euro)</string>
    <string name="str_hint_lei">Salariul Brut (în lei)</string>
    <string name="str_hint_franc">Salariul Brut (în franci)</string>
    <string name="str_hint_rupii">Salariul Brut (în rupii)</string>
    <string name="str_hint_ruble">Salariul Brut (în ruble)</string>

    <string name="str_tooltip">by Stufflex</string>
    <string name="str_intro_brut">Introduceți salariul brut</string>
    <string name="str_tooltip_lei">LEI</string>
    <string name="str_tooltip_euro">EURO</string>
    <string name="str_tooltip_dollar">DOLAR</string>

    <string name="str_salariul_brut">Salariul Brut</string>
    <string name="str_salariu_brut_spec">Din Salariul Brut se scad taxele</string>
    <string name="str_asigurari_cas">Asigurări Sociale (CAS)</string>
    <string name="str_cas">CAS</string>
    <string name="str_asigurari_cass">Asigurări Sociale de Sănătate (CASS)</string>
    <string name="str_cass">CASS</string>
    <string name="str_impozit_pe_venit">Impozit pe venit</string>
    <string name="str_salariul_net">Salariul Net</string>
    <string name="str_salariu_net_spec">Salariul Net e cel cu care salariatul rămâne în mână</string>
    <string name="str_salariat">Salariat</string>
    <string name="str_salariu_lei">Lei</string>
    <string name="str_salariu_dolari">Dolari</string>
    <string name="str_salariu_euro">Euro</string>
    <string name="str_salariu_franc">Franci</string>
    <string name="str_salariu_ruble">Ruble</string>
    <string name="str_salariu_lire">Lire</string>
    <string name="str_salariu_rupii">Rupii</string>
    <string name="str_salariu_dash">###</string>

    <string name="str_confused">😕</string>
    <string name="str_frowning">☹</string>
    <string name="str_worried">😟</string>
    <string name="str_sad">😥</string>
    <string name="str_crying">😭</string>
    <string name="str_idea_bulb">💡</string>
    <string name="str_little_smile">🙂</string>
    <string name="str_wink">😉</string>
    <string name="str_sunglasses">😎</string>
    <string name="str_right_hand">👉</string>

    <string name="str_student">👨‍🎓️</string>
    <string name="str_teacher">👨‍🏫️</string>
    <string name="str_health_worker">👨‍⚕️</string>

    <string name="str_judge">👨‍⚖️</string>
    <string name="str_farmer">👨‍🌾️</string>
    <string name="str_cook">👨‍🍳️</string>

    <string name="str_mechanic">👨‍🔧️</string>
    <string name="str_factory_worker">👨‍🏭</string>
    <string name="str_office_worker">👨‍💼</string>

    <string name="str_scientist">👨‍🔬</string>
    <string name="str_technologist">👨‍💻</string>
    <string name="str_astronaut">👨‍🚀</string>

    <string name="str_rightwards">➞</string>
    <string name="str_southeast">⬊</string>
    <string name="str_northeast">⬈</string>

    <string name="str_dollar_banknote">💵</string>
    <string name="str_euro_banknote">💶</string>
    <string name="str_pound_banknote">💷</string>

    <string name="str_romania">🇷🇴</string>

    <string name="str_grinning">😃</string>
    <string name="str_grinning_eyes">😄</string>

    <string name="str_letter_S">S</string>
    <string name="str_letter_t">t</string>
    <string name="str_letter_u">u</string>
    <string name="str_letter_f_1">f</string>
    <string name="str_letter_f_2">f</string>
    <string name="str_letter_l">l</string>
    <string name="str_letter_e">e</string>
    <string name="str_letter_x">x</string>

    <string name="str_letter_b">b</string>
    <string name="str_letter_y">y</string>

    <string name="str_number_0">0</string>

    <string name="str_functie_de_baza">Funcție de bază:</string>
    <string name="str_scutit_de_impozit">Scutit de impozit:</string>
    <string name="str_persoane_in_intretinere">Persoane în întreținere:</string>
    <string name="str_explicatie_functie_de_baza">*Salariatul poate decide unde își declară funcția de bază dacă are mai multe contracte individuale de muncă, iar dacă are un singur contract, acesta e funcția de bază.</string>
    <string name="str_explicatie_deducere">*Deducerea personală se acordă fiecărui salariat care are un contract individual de muncă (pe teritoriul României).</string>
    <string name="str_explicatie_impozit">*În cazul în care salariatul nu este scutit de impozit, acesta i se va calcula cu procentul de 10%.</string>

    <string name="str_checkBox_da">DA</string>
    <string name="str_checkBox_nu">NU</string>

    <string name="str_completeaza">Completează</string>

    <string name="str_plus">+</string>
    <string name="str_minus">–</string>

    <string name="str_click_on_dollar">USD (dolar american)</string>
    <string name="str_click_on_euro">EUR (euro)</string>
    <string name="str_click_on_pound">GBP (lira sterlină)</string>
    <string name="str_click_on_lei">RON (leu românesc)</string>
    <string name="str_click_on_rupee">INR (rupia indiană)</string>
    <string name="str_click_on_franc">CHF (franc elvețian)</string>
    <string name="str_click_on_ruble">RUB (rubla rusească)</string>


</resources>