<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    >

    <!-- BEGIN guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ht_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ht_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ht_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ht_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ht_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ht_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ht_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ht_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ht_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vt_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vt_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vt_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vt_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vt_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />
    <!-- END guidelines -->

    <!-- BEGIN text views -->
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/str_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="Reset"
        />

    <TextView
        android:id="@+id/txt_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/str_copyright"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:tooltipText="@string/str_tooltip"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_9"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_9"
        android:visibility="invisible"
        />
    <!-- END text views -->

    <!-- BEGIN go next objects -->
    <Button
        android:id="@+id/btn_play"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_play"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_7"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_9"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_9"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_7" />

    <TextView
        android:id="@+id/txt_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_play"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:translationZ="10dp"
        android:translationY="3dp"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_7"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_9"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_9"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_7" />
    <!-- END go next objects -->

    <!-- BEGIN calculations -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="@color/color_585858"
        android:textColorLink="@color/color_585858"
        android:textCursorDrawable="?android:attr/textCursorDrawable"
        android:tooltipText="@string/str_intro_brut"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_4"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_9"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_3"
        android:padding="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:ems="10"
            android:hint="@string/str_hint"
            android:inputType="number"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="@color/color_585858"
            android:textColorLink="@color/color_585858"
            android:textCursorDrawable="?android:attr/textCursorDrawable"
            android:textSize="25sp"
            android:textAlignment="center"
            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/euro_list"
        android:backgroundTint="@null"
        android:gravity="center"
        android:onClick="ClickOnEuro"
        android:text="@string/str_euro"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/color_363636"
        android:textColorLink="@color/color_585858"
        android:textCursorDrawable="@color/color_585858"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_3"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_3"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2"
        />

    <Button
        android:id="@+id/btn_lei"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/lei_list"
        android:backgroundTint="@null"
        android:text="@string/str_leu"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAlignment="center"
        android:gravity="center"
        android:onClick="ClickOnLei"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2"
        />

    <Button
        android:id="@+id/btn_sheqel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/sheqel_list"
        android:backgroundTint="@null"
        android:text="@string/str_sheqel"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAlignment="center"
        android:gravity="center"
        android:onClick="ClickOnSheqel"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_7"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_7"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2"
        />

    <Button
        android:id="@+id/btn_dollar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/dollar_list"
        android:gravity="center"
        android:onClick="ClickOnDollar"
        android:text="@string/str_dollar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_1"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2" />

    <Button
        android:id="@+id/btn_pound"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/pound_list"
        android:gravity="center"
        android:onClick="ClickOnPound"
        android:text="@string/str_pound"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_2"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_3" />

    <Button
        android:id="@+id/btn_rupee"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rupee_list"
        android:gravity="center"
        android:onClick="ClickOnRupee"
        android:text="@string/str_rupee"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_3"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_3" />

    <Button
        android:id="@+id/btn_ruble"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ruble_list"
        android:gravity="center"
        android:onClick="ClickOnRuble"
        android:text="@string/str_ruble"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_9"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_9"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_2" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/str_show"
        android:textSize="35sp"
        android:background="@drawable/btn_play"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:onClick="ClickToShow"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_8"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_4"
        android:visibility="invisible"
        />


    <!-- END calculations -->

    <!-- BEGIN salary info design -->
    <TextView
        android:id="@+id/txt_salariu_brut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_salariu_brut"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_ht_5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vt_5"
        app:layout_constraintStart_toStartOf="@+id/guideline_vt_2"
        app:layout_constraintTop_toTopOf="@+id/guideline_ht_5" />
    <!-- END salary info design -->
</androidx.constraintlayout.widget.ConstraintLayout>